--- a/Frontend/views/payment-vouchers.html
+++ b/Frontend/views/payment-vouchers.html
@@ -441,7 +441,7 @@
     <script src="/js/pageAccess.js"></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/desktop-ui.js"></script>
-    <script src="/js/payment-vouchers.js"></script>
+    <script src="/js/payment-vouchers.js?v=101"></script>
 </body>
 
 </html>
