--- a/Frontend/views/payment-vouchers-list.html
+++ b/Frontend/views/payment-vouchers-list.html
@@ -265,7 +265,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/pageAccess.js"></script>
     <script src="/js/sidebar.js"></script>
-    <script src="/js/payment-vouchers.js"></script>
+    <script src="/js/payment-vouchers.js?v=101"></script>
 </body>
 
 </html>
