--- a/Frontend/views/supplier-tax-report.html
+++ b/Frontend/views/supplier-tax-report.html
@@ -627,7 +627,7 @@
         async function loadCategories() {
             try {
                 const token = localStorage.getItem('token');
-                const res = await fetch('/api/v1/supplier-categories', { headers: { 'Authorization': `Bearer ${token}` } });
+                const res = await fetch('/api/v1/supplier-categories?type=wht_supplier', { headers: { 'Authorization': `Bearer ${token}` } });
                 const data = await res.json();
                 if (data.success) {
                     data.data.forEach(c => categoriesMap[c._id] = c.name);
