Fix backup restore logic, update settings, and add Income Statement feature

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -394,6 +394,9 @@
                                                 <li><input type="checkbox" id="expense_rpt_link"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="expense_rpt_link">Expense Report</label></li>
+                                                <li><input type="checkbox" id="income_statement"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="income_statement">Income Statement</label></li>
                                                 <li><input type="checkbox" id="vouchers_rpt_link"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="vouchers_rpt_link">Vouchers</label></li>
